--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "Serverless aws-nodejs-typescript template",
+  "description": "A simple REST API for LemonPay by Serverless framework with TypeScript and MongoDB Atlas.",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "local": "serverless offline",
+    "deploy": "serverless deploy"
   },
   "engines": {
     "node": ">=14.15.0"
   },
   "dependencies": {
     "@middy/core": "^2.5.3",
-    "@middy/http-json-body-parser": "^2.5.3"
+    "@middy/http-json-body-parser": "^2.5.3",
+    "@types/mongoose": "^5.11.97",
+    "dotenv": "^16.0.0",
+    "mongoose": "^6.2.10"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
@@ -21,10 +26,22 @@
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
     "serverless-esbuild": "^1.23.3",
+    "serverless-offline": "^8.5.0",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
   },
-  "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/totomers/lemonPay.git"
+  },
+  "keywords": [
+    "Nodejs",
+    "TypeScript",
+    "ServerLess",
+    "MongoDB Atlas",
+    "AWS Lambda"
+  ],
+  "author": "Tomer Eyal",
   "license": "MIT"
 }
