added email and transaction service

--- a/config/.env.dev
+++ b/config/.env.dev
@@ -3,5 +3,9 @@ DB_NAME=lemonPayDB
 DB_BUSINESSES_COLLECTION=businesses
 DB_USER_COLLECTION=users
 COGNITO_USER_DUMMY_PASSWORD = Az11Bb22Cc33LemonPay!
-COGNITO_USER_POOL_ID = us-east-1_ijKvraZeK
-COGNITO_CLIENT_ID = 1u9gv0k7mjgls8p1i2rpm41ko3
+SERVERLESS_REGION: eu-central-1
+COGNITO_USER_POOL_ID = eu-central-1_0Mt67WiIq
+USER_POOL_ARN: arn:aws:cognito-idp:eu-central-1:164864435727:userpool/eu-central-1_0Mt67WiIq
+COGNITO_CLIENT_ID = 9kv0cedj4ilrbpgo4sttn4k4t
+
+
