--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "dotenv": "^16.0.0",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.2.10",
-    "nodemailer": "^6.7.5"
+    "nodemailer": "^6.7.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/node": "^14.14.25",
     "@types/nodemailer": "^6.4.4",
+    "@types/uuid": "^8.3.4",
     "esbuild": "^0.14.11",
     "json-schema-to-ts": "^1.5.0",
     "prettier": "^2.6.2",
