--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/mongoose": "^5.11.97",
     "aws-sdk": "^2.1114.0",
     "dotenv": "^16.0.0",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.2.10",
     "nodemailer": "^6.7.5",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^14.14.25",
     "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.4",
