--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.2.10",
+    "nanoid": "^3.3.4",
     "nodemailer": "^6.7.5",
     "uuid": "^8.3.2"
   },
