added correct vpc details and fixed confirmation code variable bug

--- a/config.prod.json
+++ b/config.prod.json
@@ -1,11 +1,9 @@
 {
   "VPC":{
-    "securityGroupIds": ["sg-083dfda18e37b6f16"],
+    "securityGroupIds": ["sg-0be3b85b494d10ca1"],
     "subnetIds": [
-      "subnet-0057d89a2e6d126f4",
-      "subnet-042ef0140a82af9cd",
-      "subnet-0e1e25edcf598f0a5",
-      "subnet-09b199a4edcdc72a3"
+      "subnet-07b5add18e39a560a",
+      "subnet-044e75fdbc85948b0"
     ]
   },
   "STAGE":"PROD",
@@ -14,6 +12,7 @@
   "SERVERLESS_REGION": "eu-central-1",
   "COGNITO_USER_POOL_ID": "eu-central-1_wkc3b0JCL",
   "COGNITO_USER_POOL_ARN": "arn:aws:cognito-idp:eu-central-1:164864435727:userpool/eu-central-1_wkc3b0JCL",
-  "COGNITO_CLIENT_ID": "38mji68hem52jtdeoev08gno98"
+  "COGNITO_CLIENT_ID": "38mji68hem52jtdeoev08gno98",
+  "FAKE_CONFIRMATION_CODE_DEV_TESTING":""
 }
 
