--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.2.10",
     "nanoid": "^3.3.4",
     "nodemailer": "^6.7.5",
+    "pipedrive": "^15.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
